# CHESS

./: CHESS  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headers/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  board.h  cell.h  data.h  first.h  helper.h  mohre.h  pieces.h  second.h
src/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  board.cpp  helper.cpp  main.cpp  pieces.cpp
